scribble-test/src/test/resources/bad/wfchoice/gchoice/Choice02.scr
module bad.wfchoice.gchoice.Choice02;

global protocol Choice2(role A, role B)
{
	choice at A
	{
		l1() from B to A;  // Uncomment is bad
		l1() from A to B;
	}
}
